--- a/My Projects/CSS Frameworks/ BootstrapPOS/new item.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new item.html
@@ -20,7 +20,25 @@
             font-family: cursive;
             font-size: 21px;
             font-weight: bold;
+            height: 48px;
         }
+
+
+        .mt-5 {
+            margin-top: 1rem!important;
+        }
+
+        .navbar-expand-lg .navbar-collapse {
+            display: flex!important;
+            flex-basis: auto;
+            height: 8px;
+        }
+
+        .form-label {
+            margin-bottom: 0.5rem;
+            height: 4px;
+        }
+
     </style>
 
 
@@ -92,12 +110,12 @@
         </nav>
 
         <!--       <button type="button" class="btn btn-warning mt-5">Warning</button>-->
-        <button type="button" class="btn btn-info mt-5">View All Items</button>
+        <button type="button" class="btn btn-info mt-2">View All Items</button>
 
         <section class="row">
 
             <!--           1st column-->
-            <div class="col mt-5">
+            <div class="col mt-4">
 
 
                 <section class="row border border-5">
@@ -184,7 +202,7 @@
         </section>
 
 
-        <section class="col mt-5">
+        <section class="col mt-3">
             <table class="table">
                 <thead>
                 <tr>
@@ -203,13 +221,13 @@
                     <td>3</td>
                     <td>1500.00</td>
                 </tr>
-                <tr>
-                    <td>I-002</td>
-                    <td>Rice</td>
-                    <td>600</td>
-                    <td>5</td>
-                    <td>3000.00</td>
-                </tr>
+<!--                <tr>-->
+<!--                    <td>I-002</td>-->
+<!--                    <td>Rice</td>-->
+<!--                    <td>600</td>-->
+<!--                    <td>5</td>-->
+<!--                    <td>3000.00</td>-->
+<!--                </tr>-->
                 </tbody>
             </table>
         </section>
