--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -44,6 +44,7 @@
         font-size: calc(1.375rem + 1.5vw);
         color: orange;
         font-weight: bolder;
+        margin-top: 90px;
     }
 
     p {
@@ -80,13 +81,74 @@
         height: 4px;
     }
 
+    .carousel-item {
+        position: relative;
+        margin-top: -40px;
+        display: none;
+        float: left;
+        width: 100%;
+        margin-right: -100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        transition: transform .6s ease-in-out;
+    }
+    .card-img, .card-img-top {
+        border-top-left-radius: calc(0.25rem - 1px);
+        border-top-right-radius: calc(0.25rem - 1px);
+        margin-top: 10px;
+    }
+
+    .alert-success {
+        color: #0f5132;
+        background-color: #d1e7dd;
+        border-color: #badbcc;
+        font-family: cursive;
+        font-size: 21px;
+        font-weight: bold;
+        height: 48px;
+        margin-top: 50px;
+        top: 15px;
+    }
+    .table {
+        width: 98%;
+        margin-bottom: 3rem;
+        margin-left: 10px;
+    }
+
+    .table {
+        width: 98%;
+        margin-bottom: 6rem;
+        margin-left: 10px;
+    }
+    /*.row>* {*/
+    /*    flex-shrink: 0;*/
+    /*    width: 100%;*/
+    /*    max-width: 100%;*/
+    /*    padding-right: calc(var(--bs-gutter-x) * .5);*/
+    /*    padding-left: calc(var(--bs-gutter-x) * .5);*/
+    /*    margin-top: var(--bs-gutter-y);*/
+    /*    margin-top: 96px;*/
+    /*}*/
+
+    h1{
+        color: orange;
+    }
+
+    section> p {
+        margin-top: 106px;
+        margin-bottom: 1rem;
+        color: orange;
+        font-size: 30px;
+        margin-left: 650px;
+        /* margin-top: 50px; */
+    }
 </style>
 
 
 
 <body>
 <main class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Family Fare Market</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,7 +187,12 @@
     </div>
 </nav>
 
-<!--slide images-->
+    <section>
+    <p class="fw-bold">Fresh And Organic Products For You....</p>
+    </section>
+
+
+<!--   slide images-->
     <section class="row">
 <section class="col mt-2">
 
@@ -178,9 +245,9 @@
 
 <!--Title-->
 <section class="col">
-    <div class="row">
-        <h1>Fresh & Organic Foods For You...</h1>
-    </div>
+<!--    <div class="row">-->
+<!--        <h1>Fresh & Organic Foods For You...</h1>-->
+<!--    </div>-->
 
     <div class="row mt-5">
         <div class="col">
@@ -210,7 +277,7 @@
 
 
 
-
+    <section id="customer">
     <body>
     <main class="container-fluid">
 
@@ -218,8 +285,8 @@
 
         <!--    customer main-->
 
-        <main class="container mt-5">
-            <div class="alert alert-success" role="alert">
+        <main class="container ">
+            <div class=" mt-5 alert alert-success" role="alert">
                 Customer
             </div>
 
@@ -370,6 +437,10 @@
 
     </main>
     </body>
+    </section>
+
+
+    <section id="item">
     <body>
     <main class="container-fluid">
 
@@ -530,10 +601,19 @@
 
     </main>
     </body>
+    </section>
 
+
+    <section id="order">
     <body>
     <main class="mt-5 container-fluid">
-
+        <section class="row">
+            <main class="container">
+                <div class="alert alert-success" role="alert">
+                    Purchase Order
+                </div>
+            </main>
+        </section>
 
         <section class="row mt-5">
             <!--        column 1-->
@@ -712,7 +792,34 @@
 
     </main>
     </body>
+    </section>
+
 </main>
-<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js">
+    const sections = document.querySelectorAll("section[id]");
+
+    window.addEventListener("scroll", navHighlighter);
+
+    function navHighlighter() {
+
+        let scrollY = window.pageYOffset;
+
+        sections.forEach(current => {
+            const sectionHeight = current.offsetHeight;
+
+            const sectionTop = (current.getBoundingClientRect().top + window.pageYOffset) - 50;
+            sectionId = current.getAttribute("id");
+
+            if (
+                scrollY > sectionTop &&
+                scrollY <= sectionTop + sectionHeight
+            ){
+                document.querySelector(".navigation a[href*=" + sectionId + "]").classList.add("active");
+            } else {
+                document.querySelector(".navigation a[href*=" + sectionId + "]").classList.remove("active");
+            }
+        });
+    }
+</script>
 </body>
 </html>
