--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -95,7 +95,7 @@
     .card-img, .card-img-top {
         border-top-left-radius: calc(0.25rem - 1px);
         border-top-right-radius: calc(0.25rem - 1px);
-        margin-top: 50px;
+        margin-top: 40px;
     }
 
     .alert-success {
@@ -141,6 +141,14 @@
         font-size: 50px;
         margin-left: 400px;
         /* margin-top: 50px; */
+    }
+
+    .navbar-nav {
+        display: flex;
+        flex-direction: column;
+        padding-left: 0;
+        margin-bottom: -28px;
+        list-style: none;
     }
 </style>
 
@@ -290,22 +298,22 @@
                 Customer
             </div>
 
-            <nav class="mt-30 navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+<!--            <nav class="mt-30 navbar navbar-expand-lg navbar-light bg-light">-->
+<!--                <div class="container-fluid">-->
 
-                    <div class="mt-10  collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Customer</a>
-                            </li>
+<!--                    <div class="mt-10  collapse navbar-collapse" id="navbarNav">-->
+<!--                        <ul class="navbar-nav">-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link active" aria-current="page" href="#">Home</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Customer</a>-->
+<!--                            </li>-->
 
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </nav>-->
 
             <!--       <button type="button" class="btn btn-warning mt-5">Warning</button>-->
             <button type="button" class="btn btn-info mt-5">View All Customers</button>
