--- a/My Projects/SPA/Animation/Case1.html
+++ b/My Projects/SPA/Animation/Case1.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 1</title>
+    <style>
+        body{
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body>
 <h1>Hello there..How are you?</h1>
