--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -176,19 +176,23 @@
                <form class="row g-3">
                    <div class="col-md-6">
                        <label for="txtCusID" class="form-label">Customer Id</label>
-                       <input type="email" class="form-control" id="txtCusID">
+                       <input type="text" class="form-control" id="txtCusID">
+                       <p><small class="text-danger pl-1" id="lblcusid"></small></p>
                    </div>
                    <div class="col-md-6">
                        <label for="txtCusName" class="form-label">Customer Name</label>
                        <input type="text" class="form-control" id="txtCusName">
+                       <p><small class="text-danger pl-1" id="lblcusname"></small></p>
                    </div>
                    <div class="col-12">
                        <label for="txtAddress" class="form-label">Address</label>
                        <input type="text" class="form-control" id="txtAddress" placeholder="1234 Main St">
+                       <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>
                    </div>
                    <div class="col-12">
                        <label for="txtSalary" class="form-label">Salary</label>
                        <input type="text" class="form-control" id="txtSalary" placeholder="Apartment, studio, or floor">
+                       <p><small class="text-danger pl-1" id="lblcussalary"></small></p>
                    </div>
                </form>
 
@@ -290,6 +294,162 @@
              $("#txtSalary").val(customerSalary);
 
         });
+    });
+
+
+    // validation start
+
+    const cusIDRegEx = /^(C00-)[0-9]{1,3}$/;
+    const cusNameRegEx = /^[A-z ]{5,20}$/;
+    const cusAddressRegEx = /^[0-9/A-z. ,]{7,}$/;
+    const cusSalaryRegEx = /^[0-9]{1,}[.]?[0-9]{1,2}$/;
+
+
+    $('#txtCusID,#txtCusName,#txtAddress,#txtSalary').on('keydown', function (eventOb) {
+        if (eventOb.key == "Tab") {
+            eventOb.preventDefault(); // stop execution of the button
+        }
+    });
+
+    $('#txtCusID,#txtCusName,#txtAddress,#txtSalary').on('blur', function () {
+        formValid();
+    });
+
+    //focusing events
+    $("#txtCusID").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+
+        if (eventOb.key == "Control") {
+            var typedCustomerID = $("#txtCusID").val();
+            var srcCustomer = searchCustomerFromID(typedCustomerID);
+            $("#txtCusID").val(srcCustomer.getCustomerID());
+            $("#txtCusName").val(srcCustomer.getCustomerName());
+            $("#txtAddress").val(srcCustomer.getCustomerAddress());
+            $("#txtSalary").val(srcCustomer.getCustomerSalary());
+        }
+
+
+    });
+
+    $("#txtCusName").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtAddress").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtSalary").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+    // focusing events end
+    $("#btnSave").attr('disabled', true);
+
+    function clearAll() {
+        $('#txtCusID,#txtCusName,#txtAddress,#txtSalary').val("");
+        $('#txtCusID,#txtCusName,#txtAddress,#txtSalary').css('border', '2px solid #ced4da');
+        $('#txtCusID').focus();
+        $("#btnSave").attr('disabled', true);
+        loadAllCustomers();
+        $("#lblcusid,#lblcusname,#lblcusaddress,#lblcussalary").text("");
+    }
+
+    function formValid() {
+        var cusID = $("#txtCusID").val();
+        $("#txtCusID").css('border', '2px solid green');
+        $("#lblcusid").text("");
+        if (cusIDRegEx.test(cusID)) {
+            var cusName = $("#txtCusName").val();
+            if (cusNameRegEx.test(cusName)) {
+                $("#txtCusName").css('border', '2px solid green');
+                $("#lblcusname").text("");
+                var cusAddress = $("#txtAddress").val();
+                if (cusAddressRegEx.test(cusAddress)) {
+                    var cusSalary = $("#txtSalary").val();
+                    var resp = cusSalaryRegEx.test(cusSalary);
+                    $("#txtAddress").css('border', '2px solid green');
+                    $("#lblcusaddress").text("");
+                    if (resp) {
+                        $("#txtSalary").css('border', '2px solid green');
+                        $("#lblcussalary").text("");
+                        return true;
+                    } else {
+                        $("#txtSalary").css('border', '2px solid red');
+                        $("#lblcussalary").text("Cus Salary is a required field : Pattern 100.00 or 100");
+                        return false;
+                    }
+                } else {
+                    $("#txtAddress").css('border', '2px solid red');
+                    $("#lblcusaddress").text("Cus Name is a required field : Mimum 7");
+                    return false;
+                }
+            } else {
+                $("#txtCusName").css('border', '2px solid red');
+                $("#lblcusname").text("Cus Name is a required field : Mimimum 5, Max 20, Spaces Allowed");
+                return false;
+            }
+        } else {
+            $("#txtCusID").css('border', '2px solid red');
+            $("#lblcusid").text("Cus ID is a required field : Pattern C00-000");
+            return false;
+        }
+    }
+
+    function checkIfValid() {
+        var cusID = $("#txtCusID").val();
+        if (cusIDRegEx.test(cusID)) {
+            $("#txtCusName").focus();
+            var cusName = $("#txtCusName").val();
+            if (cusNameRegEx.test(cusName)) {
+                $("#txtAddress").focus();
+                var cusAddress = $("#txtAddress").val();
+                if (cusAddressRegEx.test(cusAddress)) {
+                    $("#txtSalary").focus();
+                    var cusSalary = $("#txtSalary").val();
+                    var resp = cusSalaryRegEx.test(cusSalary);
+                    if (resp) {
+                        let res = confirm("Do you really need to add this Customer..?");
+                        if (res) {
+                            saveCustomer();
+                            clearAll();
+                        }
+                    } else {
+                        $("#txtSalary").focus();
+                    }
+                } else {
+                    $("#txtAddress").focus();
+                }
+            } else {
+                $("#txtCusName").focus();
+            }
+        } else {
+            $("#txtCusID").focus();
+        }
+    }
+
+    function setButton() {
+        let b = formValid();
+        if (b) {
+            $("#btnSave").attr('disabled', false);
+        } else {
+            $("#btnSave").attr('disabled', true);
+        }
+    }
+
+    $('#btnSave').click(function () {
+        checkIfValid();
     });
 
 
