--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -390,19 +390,22 @@
                         <div class="col-md-6">
                             <label for="txtCustomerId" class="form-label">Customer Id</label>
                             <input type="text" class="form-control" id="txtCustomerId">
-                            <p><small id="error" class="text-danger p-1"></small></p>
+                            <p><small class="text-danger pl-1" id="lblcusid"></small></p>
                         </div>
                         <div class="col-md-6">
                             <label for="txtCustomerName" class="form-label">Customer Name</label>
                             <input type="text" class="form-control" id="txtCustomerName">
+                            <p><small class="text-danger pl-1" id="lblcusname"></small></p>
                         </div>
                         <div class="col-12">
                             <label for="txtCustomerAddress" class="form-label">Address</label>
                             <input type="text" class="form-control" id="txtCustomerAddress" placeholder="1234 Main St">
+                            <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>
                         </div>
                         <div class="col-12">
-                            <label for="txtCustomerContact" class="form-label">Contact No</label>
-                            <input type="text" class="form-control" id="txtCustomerContact" placeholder="Apartment, studio, or floor">
+                            <label for="txtSalary" class="form-label">Salary</label>
+                            <input type="text" class="form-control" id="txtSalary" placeholder="Apartment, studio, or floor">
+                            <p><small class="text-danger pl-1" id="lblcussalary"></small></p>
                         </div>
                     </form>
 
@@ -422,7 +425,7 @@
                         <th>Customer Id</th>
                         <th>Customer Name</th>
                         <th>Address</th>
-                        <th>Contact No</th>
+                        <th>Salary</th>
 
                     </tr>
                     </thead>
@@ -463,7 +466,7 @@
 
 
 
-        <!--    customer main-->
+        <!--    item main-->
 
         <main class="container">
             <div class="mt-5 alert alert-success" role="alert">
@@ -556,6 +559,7 @@
                         <div class="col-md-6">
                             <label for="txtItemCode" class="form-label">Item Code</label>
                             <input type="email" class="form-control" id="txtItemCode">
+
                         </div>
                         <div class="col-md-6">
                             <label for="txtItemName" class="form-label">Item Name</label>
@@ -873,11 +877,11 @@
 
     $("#txtCustomerAddress").keydown(function (event) {
         if(event.key == "Enter"){
-            $("#txtCustomerContact").focus();
+            $("#txtSalary").focus();
         }
     });
 
-    $("#txtCustomerContact").keydown(function (event) {
+    $("#txtSalary").keydown(function (event) {
         if(event.key == "Enter"){
             $("#customerTable").focus();
         }
@@ -892,12 +896,12 @@
         let customerId = $("#txtCustomerId").val();
         let customerName = $("#txtCustomerName").val();
         let customerAddress = $("#txtCustomerAddress").val();
-        let customerContact = $("#txtCustomerContact").val();
+        let salary = $("#txtSalary").val();
 
-        console.log(customerId, customerName, customerAddress, customerContact);
-        console.log(typeof customerId, typeof customerName, typeof customerAddress, typeof customerContact)
+        console.log(customerId, customerName, customerAddress, salary);
+        console.log(typeof customerId, typeof customerName, typeof customerAddress, typeof salary)
 
-        let row= `<tr><td>${customerId}</td><td>${customerName}</td><td>${customerAddress}</td><td>${customerContact}</td> </tr>`;
+        let row= `<tr><td>${customerId}</td><td>${customerName}</td><td>${customerAddress}</td><td>${salary}</td> </tr>`;
 
         $("#customerTable").append(row);
 
@@ -906,15 +910,15 @@
             let customerId = $(this).children(":eq(0)").text();
             let customerName = $(this).children(":eq(1)").text();
             let customerAddress = $(this).children(":eq(2)").text();
-            let customerContact = $(this).children(":eq(3)").text();
-            console.log(customerId, customerName, customerAddress, customerContact)
+            let salary = $(this).children(":eq(3)").text();
+            console.log(customerId, customerName, customerAddress, salary)
 
 
             // set values for the input fields
             $("#txtCustomerId").val(customerId);
             $("#txtCustomerName").val(customerName);
             $("#txtCustomerAddress").val(customerAddress);
-            $("#txtCustomerContact").val(customerContact);
+            $("#txtSalary").val(salary);
 
         });
 
@@ -925,6 +929,164 @@
 
 
     });
+
+
+// customer form validation start
+    const cusIDRegEx = /^(C00-)[0-9]{1,3}$/;
+    const cusNameRegEx = /^[A-z ]{5,20}$/;
+    const cusAddressRegEx = /^[0-9/A-z. ,]{7,}$/;
+    const cusSalaryRegEx = /^[0-9]{1,}[.]?[0-9]{1,2}$/;
+
+
+    $('#txtCustomerId,#txtCustomerName,#txtCustomerAddress,#txtSalary').on('keydown', function (eventOb) {
+        if (eventOb.key == "Tab") {
+            eventOb.preventDefault(); // stop execution of the button
+        }
+    });
+
+    $('#txtCustomerId,#txtCustomerName,#txtCustomerAddress,#txtSalary').on('blur', function () {
+        formValid();
+    });
+
+    //focusing events
+    $("#txtCustomerId").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+
+        if (eventOb.key == "Control") {
+            var typedCustomerID = $("#txtCustomerId").val();
+            var srcCustomer = searchCustomerFromID(typedCustomerID);
+            $("#txtCustomerId").val(srcCustomer.getCustomerID());
+            $("#txtCustomerName").val(srcCustomer.getCustomerName());
+            $("#txtCustomerAddress").val(srcCustomer.getCustomerAddress());
+            $("#txtSalary").val(srcCustomer.getCustomerSalary());
+        }
+
+
+    });
+
+    $("#txtCustomerName").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtCustomerAddress").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtSalary").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+    // focusing events end
+    $("#btnSave").attr('disabled', true);
+
+    function clearAll() {
+        $('#txtCustomerId,#txtCustomerName,#txtCustomerAddress,#txtSalary').val("");
+        $('#txtCustomerId,#txtCustomerName,#txtCustomerAddress,#txtSalary').css('border', '2px solid #ced4da');
+        $('#txtCustomerId').focus();
+        $("#btnSave").attr('disabled', true);
+        loadAllCustomers();
+        $("#lblcusid,#lblcusname,#lblcusaddress,#lblcussalary").text("");
+    }
+
+    function formValid() {
+        var cusID = $("#txtCustomerId").val();
+        $("#txtCustomerId").css('border', '2px solid green');
+        $("#lblcusid").text("");
+        if (cusIDRegEx.test(cusID)) {
+            var cusName = $("#txtCustomerName").val();
+            if (cusNameRegEx.test(cusName)) {
+                $("#txtCustomerName").css('border', '2px solid green');
+                $("#lblcusname").text("");
+                var cusAddress = $("#txtCustomerAddress").val();
+                if (cusAddressRegEx.test(cusAddress)) {
+                    var cusSalary = $("#txtSalary").val();
+                    var resp = cusSalaryRegEx.test(cusSalary);
+                    $("#txtCustomerAddress").css('border', '2px solid green');
+                    $("#lblcusaddress").text("");
+                    if (resp) {
+                        $("#txtSalary").css('border', '2px solid green');
+                        $("#lblcussalary").text("");
+                        return true;
+                    } else {
+                        $("#txtSalary").css('border', '2px solid red');
+                        $("#lblcussalary").text("Cus Salary is a required field : Pattern 100.00 or 100");
+                        return false;
+                    }
+                } else {
+                    $("#txtCustomerAddress").css('border', '2px solid red');
+                    $("#lblcusaddress").text("Cus Name is a required field : Mimum 7");
+                    return false;
+                }
+            } else {
+                $("#txtCustomerName").css('border', '2px solid red');
+                $("#lblcusname").text("Cus Name is a required field : Mimimum 5, Max 20, Spaces Allowed");
+                return false;
+            }
+        } else {
+            $("#txtCustomerId").css('border', '2px solid red');
+            $("#lblcusid").text("Cus ID is a required field : Pattern C00-000");
+            return false;
+        }
+    }
+
+    function checkIfValid() {
+        var cusID = $("#txtCustomerId").val();
+        if (cusIDRegEx.test(cusID)) {
+            $("#txtCustomerName").focus();
+            var cusName = $("#txtCustomerName").val();
+            if (cusNameRegEx.test(cusName)) {
+                $("#txtCustomerAddress").focus();
+                var cusAddress = $("#txtCustomerAddress").val();
+                if (cusAddressRegEx.test(cusAddress)) {
+                    $("#txtSalary").focus();
+                    var cusSalary = $("#txtSalary").val();
+                    var resp = cusSalaryRegEx.test(cusSalary);
+                    if (resp) {
+                        let res = confirm("Do you really need to add this Customer..?");
+                        if (res) {
+                            saveCustomer();
+                            clearAll();
+                        }
+                    } else {
+                        $("#txtSalary").focus();
+                    }
+                } else {
+                    $("#txtCustomerAddress").focus();
+                }
+            } else {
+                $("#txtCustomerName").focus();
+            }
+        } else {
+            $("#txtCustomerId").focus();
+        }
+    }
+
+    function setButton() {
+        let b = formValid();
+        if (b) {
+            $("#btnSave").attr('disabled', false);
+        } else {
+            $("#btnSave").attr('disabled', true);
+        }
+    }
+
+    $('#btnSave').click(function () {
+        checkIfValid();
+    });
+
+// customer form validation end
+
 
 
     // item form
@@ -1002,6 +1164,8 @@
         }
     });
 
+
+// item form validation
 
 
 
