--- a/My Projects/SPA/index.html
+++ b/My Projects/SPA/index.html
@@ -558,20 +558,24 @@
                     <form class="row g-3">
                         <div class="col-md-6">
                             <label for="txtItemCode" class="form-label">Item Code</label>
-                            <input type="email" class="form-control" id="txtItemCode">
+                            <input type="text" class="form-control" id="txtItemCode">
+                            <p><small class="text-danger pl-1" id="lblitemid"></small></p>
 
                         </div>
                         <div class="col-md-6">
                             <label for="txtItemName" class="form-label">Item Name</label>
                             <input type="text" class="form-control" id="txtItemName">
+                            <p><small class="text-danger pl-1" id="lblitemname"></small></p>
                         </div>
                         <div class="col-12">
                             <label for="txtPrice" class="form-label">Item Price</label>
                             <input type="text" class="form-control" id="txtPrice" placeholder="0.00">
+                            <p><small class="text-danger pl-1" id="lblprice"></small></p>
                         </div>
                         <div class="col-12">
                             <label for="txtQty" class="form-label">Item Quantity</label>
                             <input type="text" class="form-control" id="txtQty" placeholder="">
+                            <p><small class="text-danger pl-1" id="lblqty"></small></p>
                         </div>
                     </form>
 
@@ -1153,6 +1157,162 @@
 
 
 // item form validation
+    const itemIDRegEx = /^(I00-)[0-9]{1,3}$/;
+    const itemNameRegEx = /^[A-z ]{3,20}$/;
+    const priceRegEx = /^[0-9]{1,}[.]?[0-9]{1,2}$/;
+    const qtyRegEx = /^[1-9][0-9]*$/;
+
+
+    $('#txtItemCode,#txtItemName,#txtPrice,#txtQty').on('keydown', function (eventOb) {
+        if (eventOb.key == "Tab") {
+            eventOb.preventDefault(); // stop execution of the button
+        }
+    });
+
+    $('#txtItemCode,#txtItemName,#txtPrice,#txtQty').on('blur', function () {
+        formValid();
+    });
+
+    //focusing events
+    $("#txtItemCode").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+
+        if (eventOb.key == "Control") {
+            var typedItemCode = $("#txtItemCode").val();
+            var srcItem = searchItemFromID(typedItemCode);
+            $("#txtItemCode").val(srcItem.getItemCode);
+            $("#txtItemName").val(srcItem.getItemName());
+            $("#txtPrice").val(srcItem.getPrice());
+            $("#txtQty").val(srcItem.getQty());
+        }
+
+
+    });
+
+    $("#txtItemName").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtPrice").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+
+    $("#txtQty").on('keyup', function (eventOb) {
+        setButton();
+        if (eventOb.key == "Enter") {
+            checkIfValid();
+        }
+    });
+    // focusing events end
+    $("#btnItemSave").attr('disabled', true);
+
+    function clearAll() {
+        $('#txtItemCode,#txtItemName,#txtPrice,#txtQty').val("");
+        $('#txtItemCode,#txtItemName,#txtPrice,#txtQty').css('border', '2px solid #ced4da');
+        $('#txtItemCode').focus();
+        $("#btnItemSave").attr('disabled', true);
+        loadAllItems();
+        $("#lblitemid,#lblitemname,#lblprice,#lblqty").text("");
+    }
+
+    function formValid() {
+        var itemCode = $("#txtItemCode").val();
+        $("#txtItemCode").css('border', '2px solid green');
+        $("#lblitemid").text("");
+        if (itemIDRegEx.test(itemCode)) {
+            var itemName = $("#txtItemName").val();
+            if (itemNameRegEx.test(itemName)) {
+                $("#txtItemName").css('border', '2px solid green');
+                $("#lblitemname").text("");
+                var price = $("#txtPrice").val();
+                if (priceRegEx.test(price)) {
+                    var qty = $("#txtQty").val();
+                    var resp = qtyRegEx.test(qty);
+                    $("#txtPrice").css('border', '2px solid green');
+                    $("#lblprice").text("");
+                    if (resp) {
+                        $("#txtQty").css('border', '2px solid green');
+                        $("#lblqty").text("");
+                        return true;
+                    } else {
+                        $("#txtQty").css('border', '2px solid red');
+                        $("#lblqty").text("Item qty is a required field : only numbers");
+                        return false;
+                    }
+                } else {
+                    $("#txtPrice").css('border', '2px solid red');
+                    $("#lblprice").text("Item price is a required field : Pattern 100 or 100.00");
+                    return false;
+                }
+            } else {
+                $("#txtItemName").css('border', '2px solid red');
+                $("#lblitemname").text("Item is a required field : Mimimum 5, Max 20, Spaces Allowed");
+                return false;
+            }
+        } else {
+            $("#txtItemCode").css('border', '2px solid red');
+            $("#lblitemid").text("Item code is a required field : Pattern I00-000");
+            return false;
+        }
+    }
+
+    function checkIfValid() {
+        var itemCode = $("#txtItemCode").val();
+        if (itemIDRegEx.test(itemCode)) {
+            $("#txtItemName").focus();
+            var itemName = $("#txtItemName").val();
+            if (itemNameRegEx.test(itemName)) {
+                $("#txtPrice").focus();
+                var price = $("#txtPrice").val();
+                if (priceRegEx.test(price)) {
+                    $("#txtQty").focus();
+                    var qty = $("#txtQty").val();
+                    var resp = qtyRegEx.test(qty);
+                    if (resp) {
+                        let res = confirm("Do you really need to add this Customer..?");
+                        if (res) {
+                            saveItem();
+                            clearAll();
+                        }
+                    } else {
+                        $("#txtQty").focus();
+                    }
+                } else {
+                    $("#txtPrice").focus();
+                }
+            } else {
+                $("#txtItemName").focus();
+            }
+        } else {
+            $("#txtItemCode").focus();
+        }
+    }
+
+    function setButton() {
+        let b = formValid();
+        if (b) {
+            $("#btnItemSave").attr('disabled', false);
+        } else {
+            $("#btnItemSave").attr('disabled', true);
+        }
+    }
+
+    $('#btnItemSave').click(function () {
+        checkIfValid();
+    });
+
+// Item validation end
+
+
 
 
 
