--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -38,6 +38,43 @@
             margin-bottom: 0.5rem;
             height: 4px;
         }
+
+
+        .row {
+            --bs-gutter-x: -2.5rem;
+            --bs-gutter-y: 0;
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: calc(-1 * var(--bs-gutter-y));
+            margin-right: calc(-.5 * var(--bs-gutter-x));
+            margin-left: calc(-.5 * var(--bs-gutter-x));
+        }
+
+
+        .form-control {
+            display: block;
+            width: 77%;
+            padding: 0.375rem 0.75rem;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #212529;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ced4da;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            border-radius: 0.25rem;
+            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        }
+
+        .btn-danger:hover {
+            color: #fff;
+            background-color: #bb2d3b;
+            border-color: #b02a37;
+            margin-left: 40px;
+        }
     </style>
 
 </head>
@@ -124,29 +161,27 @@
                    </div>
                </div>
 
-
-               <form>
-                   <fieldset disabled>
-
-                       <div class="mb-3">
-                           <input type="text" id="disabledTextInput" class="form-control" placeholder="Input Name/NIC/Tp here">
+                   <form class="row g-3">
+                       <div class="col-12">
+                           <label for="txtAddress" class="form-label">Customer Id</label>
+                           <input type="text" class="form-control" id="txtSearchCusId" placeholder="">
+<!--                           <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>-->
                        </div>
-                       <div class="mb-3">
-                           <select id="disabledSelect" class="form-select">
-                               <option>Name</option>
-                           </select>
+                       <div class="col-12">
+                           <label for="txtSalary" class="form-label">Name</label>
+                           <input type="text" class="form-control" id="txtSearchCusName" placeholder="">
+<!--                           <p><small class="text-danger pl-1" id="lblcussalary"></small></p>-->
                        </div>
 
-                   </fieldset>
-                   <button type="button" class="btn btn-success">Search</button>
-               </form>
+                   </form>
+
                </section>
 
                <section class="row mt-5">
                    <div class="btn-group mt-10" role="group" aria-label="Basic mixed styles example">
-                                      <button type="button" class="btn btn-danger">Delete</button>
-                                      <button type="button" class="btn btn-warning">Details</button>
-                                      <button type="button" class="btn btn-success">Clear</button>
+<!--                                      <button type="button" class="btn btn-danger">Delete</button>-->
+<!--                                      <button type="button" class="btn btn-warning">Details</button>-->
+                                      <button id="btnSearch" type="button" class="btn btn-success">Search</button>
                                   </div>
                </section>
            </div>
@@ -228,70 +263,65 @@
 </main>
 
 <script src="assets/jQuery/jquery-3.6.0.min.js"></script>
+<script src="db/DB.js"></script>
 <script>
 
-    $("#txtCusID").keydown(function (event) {
-        if(event.key == "Enter"){
-            $("#txtCusName").focus();
-        }
-    });
-
-    $("#txtCusName").keydown(function (event) {
-        if(event.key == "Enter"){
-            $("#txtAddress").focus();
-        }
-    });
-
-    $("#txtAddress").keydown(function (event) {
-        if(event.key == "Enter"){
-            $("#txtSalary").focus();
-        }
-    });
-
-    $("#txtSalary").keydown(function (event) {
-        if(event.key == "Enter"){
-            $("#customerTable").focus();
-        }
-    });
-
     $("#btnSave").click(function () {
-        // remove all the row click events
-        $("#customerTable>tr").off("click");
-
-
-
-       let customerId = $("#txtCusID").val();
-       let customerName = $("#txtCusName").val();
-       let customerAddress = $("#txtAddress").val();
-       let customerSalary = $("#txtSalary").val();
-
-       console.log(customerId, customerName, customerAddress, customerSalary);
-       console.log(typeof customerId, typeof customerName, typeof customerAddress, typeof customerSalary)
-
-     let row= `<tr><td>${customerId}</td><td>${customerName}</td><td>${customerAddress}</td><td>${customerSalary}</td> </tr>`;
-
-        $("#customerTable").append(row);
-
-        $("#customerTable>tr").click(function () {
-            // console.log($(this));
-            let customerId = $(this).children(":eq(0)").text();
-            let customerName = $(this).children(":eq(1)").text();
-            let customerAddress = $(this).children(":eq(2)").text();
-            let customerSalary = $(this).children(":eq(3)").text();
-            console.log(customerId, customerName, customerAddress, customerSalary)
-
-
-            // set values for the input fields
-             $("#txtCusID").val(customerId);
-             $("#txtCusName").val(customerName);
-             $("#txtAddress").val(customerAddress);
-             $("#txtSalary").val(customerSalary);
-
-        });
+        saveCustomer();
+        clearAll();
+        loadAllCustomers();
     });
 
+    $("#btnSearch").click(function () {
+        var searchId = $("#txtSearchCusId").val();
 
-    // validation start
+        var response = searchCustomer(searchId);
+        if (response) {
+            $("#txtCusID").val(response.customerId);
+            $("#txtCusName").val(response.customerName);
+            $("#txtAddress").val(response.customerAddress);
+            $("#txtSalary").val(response.customerSalary);
+        }else{
+            clearAll();
+            alert("No Such a Customer");
+
+        }
+    });
+
+    function loadAllCustomers(){
+        $("#customerTable").empty();
+        for(var i of customerDB){
+            let row= `<tr><td>${i.customerId}</td><td>${i.customerName}</td><td>${i.customerAddress}</td><td>${i.customerSalary}</td> </tr>`;
+
+            $("#customerTable").append(row);
+        }
+    }
+
+
+    function saveCustomer(){
+        let customerId = $("#txtCusID").val();
+        let customerName = $("#txtCusName").val();
+        let customerAddress = $("#txtAddress").val();
+        let customerSalary = $("#txtSalary").val();
+
+
+    var customerObject = {
+        customerId: customerId,
+        customerName: customerName,
+        customerAddress: customerAddress,
+        customerSalary: customerSalary
+    };
+    customerDB.push(customerObject);
+    }
+
+    function searchCustomer(customerId){
+        for (let i = 0; i < customerDB.length; i++) {
+            if (customerDB[i].customerId == customerId) {
+                return customerDB[i];
+            }
+        }
+    }
+
 
     const cusIDRegEx = /^(C00-)[0-9]{1,3}$/;
     const cusNameRegEx = /^[A-z ]{5,20}$/;
@@ -301,7 +331,7 @@
 
     $('#txtCusID,#txtCusName,#txtAddress,#txtSalary').on('keydown', function (eventOb) {
         if (eventOb.key == "Tab") {
-            eventOb.preventDefault(); // stop execution of the button
+            eventOb.preventDefault();
         }
     });
 
@@ -309,7 +339,7 @@
         formValid();
     });
 
-    //focusing events
+
     $("#txtCusID").on('keyup', function (eventOb) {
         setButton();
         if (eventOb.key == "Enter") {
@@ -348,7 +378,7 @@
             checkIfValid();
         }
     });
-    // focusing events end
+
     $("#btnSave").attr('disabled', true);
 
     function clearAll() {
@@ -445,6 +475,79 @@
     $('#btnSave').click(function () {
         checkIfValid();
     });
+
+
+
+
+
+
+
+
+    // $("#txtCusID").keydown(function (event) {
+    //     if(event.key == "Enter"){
+    //         $("#txtCusName").focus();
+    //     }
+    // });
+    //
+    // $("#txtCusName").keydown(function (event) {
+    //     if(event.key == "Enter"){
+    //         $("#txtAddress").focus();
+    //     }
+    // });
+    //
+    // $("#txtAddress").keydown(function (event) {
+    //     if(event.key == "Enter"){
+    //         $("#txtSalary").focus();
+    //     }
+    // });
+    //
+    // $("#txtSalary").keydown(function (event) {
+    //     if(event.key == "Enter"){
+    //         $("#customerTable").focus();
+    //     }
+    // });
+    //
+    // $("#btnSave").click(function () {
+    //     // remove all the row click events
+    //     $("#customerTable>tr").off("click");
+
+
+
+       // let customerId = $("#txtCusID").val();
+       // let customerName = $("#txtCusName").val();
+       // let customerAddress = $("#txtAddress").val();
+       // let customerSalary = $("#txtSalary").val();
+       //
+       // console.log(customerId, customerName, customerAddress, customerSalary);
+       // console.log(typeof customerId, typeof customerName, typeof customerAddress, typeof customerSalary)
+
+     // let row= `<tr><td>${customerId}</td><td>${customerName}</td><td>${customerAddress}</td><td>${customerSalary}</td> </tr>`;
+     //
+     //    $("#customerTable").append(row);
+
+        // $("#customerTable>tr").click(function () {
+        //     // console.log($(this));
+        //     let customerId = $(this).children(":eq(0)").text();
+        //     let customerName = $(this).children(":eq(1)").text();
+        //     let customerAddress = $(this).children(":eq(2)").text();
+        //     let customerSalary = $(this).children(":eq(3)").text();
+        //     console.log(customerId, customerName, customerAddress, customerSalary)
+
+
+            // set values for the input fields
+    //          $("#txtCusID").val(customerId);
+    //          $("#txtCusName").val(customerName);
+    //          $("#txtAddress").val(customerAddress);
+    //          $("#txtSalary").val(customerSalary);
+    //
+    //     });
+    // });
+
+
+    // validation start
+
+
+    
 
 
 </script>
